src/test/resources/private/typechecking/fail/conditions/cond_fail01.jova

class Test1 {

	public int memint;
	public bool membool;
}

class Cls{

	public Test1 func(int x){

	    Test1 t;
		int u;
		bool f;
		int a;
		bool c;
		
		c = nix;
		
		if (c){
		
		}
		
		u = 4;
		t = new Test1;
	    
	    if(t){
			u = u+1;
			c = false;
	    }

        if("somestr"){

        }

	    while(t.membool) {
	        a = 0;
	    }
		
		if ((t.membool && (f || true) ) && c){
		
		}

		return t;
	}
}